compiler/tests/should-fail/Parsing2.via
/* InvalidConstructorCallError */

/* TODO: the error message generated for this file does not have any expected tokens. */

fun main() {
    val x = 5;
}
